@@ -75,5 +75,25 @@ TEST(wrong_all_pseudo_option_prefixes)
 	assert_failure(set_options("invall", OPT_GLOBAL));
 }
 
+TEST(huge_input_length)
+{
+	assert_success(set_options("fusehome=llongtextlongtextlongtextlongtextlongtex"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlongtextlo"
+			"ngtextlongtextlongtextlongtextlongtextlongtextlongtextadfadfasdfasdfasfa"
+			"sdfsdf", OPT_GLOBAL));
+}
+
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
 /* vim: set cinoptions+=t0 filetype=c : */
