@@ -57,6 +57,8 @@
 
 	Fixed querying file information on 64-bit Windows.  Thanks to santhoshr.
 
+	Fixed crash on very long option value on :set.  Thanks to aleksejrs.
+
 0.8.1 to 0.8.1a
 
 	Added c key to menus that inserts parts of menu line into command-line.
